// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Number row should match snapshot for component suffix 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
        "width": "100%",
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Array [
                Object {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                undefined,
              ],
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
        testID="foo_test_label"
      >
        foo
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 14,
            "lineHeight": 20,
            "textAlign": "right",
          },
          undefined,
          undefined,
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Array [
                Object {
                  "fontSize": 14,
                  "lineHeight": 20,
                  "textAlign": "right",
                },
                undefined,
                undefined,
              ],
              Object {
                "color": "rgba(115, 115, 115, 1)",
              },
            ],
          ]
        }
        testID="foo_test"
      >
        100
      </Text>
    </Text>
    <Text>
      $
    </Text>
  </View>
</View>
`;

exports[`Number row should match snapshot for text suffix 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "flexDirection": "row",
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
        "width": "100%",
      },
      Object {
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderBottomColor": "rgba(229, 229, 229, 1)",
        "borderBottomWidth": 1,
        "borderLeftColor": "rgba(229, 229, 229, 1)",
        "borderRightColor": "rgba(229, 229, 229, 1)",
        "borderTopColor": "rgba(229, 229, 229, 1)",
      },
    ]
  }
>
  <View
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "flex-end",
          "flexDirection": "row",
          "justifyContent": "flex-start",
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Array [
                Object {
                  "fontSize": 14,
                  "lineHeight": 20,
                },
                undefined,
              ],
              Object {
                "color": "rgba(0, 0, 0, 1)",
              },
            ],
          ]
        }
        testID="foo_test_label"
      >
        foo
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "flexWrap": "wrap",
        "justifyContent": "flex-end",
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 14,
            "lineHeight": 20,
            "textAlign": "right",
          },
          undefined,
          undefined,
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Array [
                Object {
                  "fontSize": 14,
                  "lineHeight": 20,
                  "textAlign": "right",
                },
                undefined,
                undefined,
              ],
              Object {
                "color": "rgba(115, 115, 115, 1)",
              },
            ],
          ]
        }
        testID="foo_test"
      >
        100
      </Text>
      <Text>
         
      </Text>
      <Text
        style={
          Array [
            Object {
              "fontFamily": "RegularFont",
              "fontSize": 16,
              "fontWeight": "400",
              "lineHeight": 24,
            },
            Array [
              Array [
                Object {
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginLeft": 4,
                },
                undefined,
                undefined,
              ],
              Object {
                "color": "rgba(115, 115, 115, 1)",
              },
            ],
          ]
        }
        testID="foo_test_suffix"
      >
        $
      </Text>
    </Text>
  </View>
</View>
`;
